--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         
         <section>
           <h3>Baking website : Dazzling Delight</h3>
-          <img src="images/Dazzlingd.JPG" alt="description of image">
+          <img src="Dazzlingd.JPG" alt="description of image">
           <p>Built a website for a small baking business</p>
           <p>"Savor the convenience of freshly baked delights at your doorstep with Dazzling Delight. Explore a delectable array of artisanal pastries, cakes, and breads crafted with love and premium ingredients. Elevate your taste buds with the perfect blend of flavors, delivered with a click to indulge your sweet cravings effortlessly."</p>
           <p>"Indulge your sweet cravings with this delightful baking website! Immerse yourself in a visually appealing and user-friendly interface crafted with HTML, CSS, and Javascript. Explore a tempting array of baked goods, from decadent cakes to artisanal cup-cakes, all showcased with high-quality images and detailed descriptions.Whether you're a seasoned baker or just looking for a sweet treat, our platform brings the joy of baking to your fingertips, making every click a step closer to satisfying your sweet tooth."</p>
           <a class="btn" href="https://shafia31.github.io/Dazzling-Delight/">View project</a>
         </section>
-        <!---PROJECT 1--->
+        <!---PROJECT 2--->
 
         <div class="content-wrapper">
         <h2>PROJECT - Association Of Muslim Professionals (AMP) BLOG</h2>
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-       <!---PROJECT 2--->
+       <!---PROJECT 3--->
 
       <section class="Projects-item">
         <div class="content-wrapper">
