Updated the first section
Added
- a png image
-one liner description using type.js script tag animation
-resume pdf button

--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <section class="firstsection">
-        <div class="leftsection">Hi, My name is<span class="yellow"> Shafia</span> 
+        <div class="leftsection">
+          <div>Hi, My name is<span class="yellow"> Shafia</span></div> 
           <div>and I am a passionate</div>
         <span id="element"></span>
+        <div class="btn">
+          <button class="button"><a href="Shafia Shafique Resume.pdf">Download Resume</a></button>
+        </div>
+        
+        
       </div>
 
-        <div class="rightsection"><img src="girldev.png" alt=""></div>
+        <div class="rightsection"><img src="girldev1.png" alt=""></div>
 
       </section>
+
       <!--<header>
         <div class="content-wrapper">
         <h1 id="name">Shafia Shafique</h1>
