edited the first section

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <!-- Setup and start animation! -->
   <script>
     var typed = new Typed('#element', {
-      strings: ['Front-End Developer', 'Wordpress Content Editor', 'Content Analyst', 'and', 'Committed Learner'],
+      strings: ['Front-End Developer', 'Wordpress Editor', 'Content Analyst', 'and', 'Committed Learner'],
       typeSpeed: 50,
     });
   </script>
